examples/tests/compile_fail/index_non_array_fail.zl
struct Point {
    x i32,
    y i32
}

fun main() >> i32 {
    Point p;
    p.x = 1;
    p.x[0] = 5;
    return 0;
}
